add pages and navigation

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Your app name",
-    "short_name": "App shot name",
+    "name": "Bazingua",
+    "short_name": "Bazingua",
     "theme_color": "#00ff00",
     "background_color": "#ffffff",
     "display": "standalone",
