--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "name": "Bazingua",
     "short_name": "Bazingua",
     "theme_color": "#00ff00",
-    "background_color": "#ffffff",
+    "background_color": "#EDF1F4",
     "display": "standalone",
     "orientation": "any",
     "scope": "/",
