--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Bazingua",
     "short_name": "Bazingua",
-    "theme_color": "#00ff00",
+    "theme_color": "#EDF1F4",
     "background_color": "#EDF1F4",
     "display": "standalone",
     "orientation": "any",
